--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
-#container {
+.container {
     display: flex; /* makes container a flexbo*/
-    flex-flow: row-wrap; /* layout the rows and wrap the */
+    flex-flow: row wrap; /* layout the rows and wrap the */
     box-sizing: border-box;
     margin-right: auto;
     margin-left: auto;
@@ -15,4 +15,22 @@
     margin: 10px;
     padding: 20px;
     background-color: #fff;
+}
+
+.makeRed {
+    background-color: red;
+}
+
+.makeBlue {
+    background-color: blue;
+}
+
+.box {
+    flex: 1; /* makes contents controllable with flexbox */
+    display: flex;
+    flex-flow: column;
+    max-width: 240px;
+    margin: 10px;
+    padding: 20px;
+    background-color: #000;
 }
